<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="end">

    <LinearLayout
        android:id="@+id/landing_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient_1">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/edit_message"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="sendMessage"
            android:text="@string/button_send"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <Spinner
            android:id="@+id/file_selector"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/gradient_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Randomize Gradient" />

        <Button
            android:id="@+id/play_audio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gradient_switcher"
            android:layout_centerHorizontal="true"
            android:text="Play" />

        <Button
            android:id="@+id/pause_audio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/play_audio_button"
            android:layout_centerHorizontal="true"
            android:text="Pause" />

        <Button
            android:id="@+id/loop_audio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pause_audio_button"
            android:layout_centerHorizontal="true"
            android:text="Loop" />

        <Button
            android:id="@+id/stop_audio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loop_audio_button"
            android:layout_centerHorizontal="true"
            android:text="Stop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/overwrite"
            android:text="Will Be overwritten"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/gobold"
            android:textSize="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:maxWidth="75dp"
                android:src="@drawable/ic_stop_icon"
                android:contentDescription="@string/stop_audio"
                android:tint="@color/white"
                android:background="@drawable/circle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <ImageButton
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:maxWidth="125dp"
                android:src="@drawable/ic_play_icon"
                android:contentDescription="@string/play_audio"
                android:tint="@color/white"
                android:background="@drawable/circle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <ImageButton
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:maxWidth="75dp"
                android:src="@drawable/ic_loop_icon"
                android:contentDescription="@string/loop_audio"
                android:tint="@color/white"
                android:background="@drawable/circle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>